force-app/main/default/objects/Course_Questionnaire__c/Course_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Course Questionnaire</label>
    <nameField>
        <displayFormat>CQ-{00000}</displayFormat>
        <label>Course Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>