force-app/main/default/objects/Course_Questionnaire__c/fields/Arrived_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrived_On_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrived at Scheduled Start Time</label>
    <type>Checkbox</type>
</CustomField>