force-app/main/default/objects/Course_Questionnaire__c/fields/Contacted_H_S_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contacted_H_S_Contact_Details__c</fullName>
    <label>Contacted H&amp;S Contact Details</label>
    <length>128</length>
    <type>Text</type>
</CustomField>