force-app/main/default/objects/Course_Questionnaire__c/fields/Did_you_contact_H_S_Contact__c.field-meta.xml
<CustomField>
    <fullName>Did_you_contact_H_S_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did you contact H&amp;S Contact</label>
    <type>Checkbox</type>
</CustomField>