force-app/main/default/objects/Course_Questionnaire__c/fields/Ended_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Ended_On_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ended at Scheduled End Time</label>
    <type>Checkbox</type>
</CustomField>