force-app/main/default/objects/Course_Questionnaire__c/fields/Equipment_Unavailable_Details__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Unavailable_Details__c</fullName>
    <label>Equipment Unavailable Details</label>
    <length>128</length>
    <type>Text</type>
</CustomField>