force-app/main/default/objects/Course_Questionnaire__c/fields/Expectations_Incorrect_Details__c.field-meta.xml
<CustomField>
    <fullName>Expectations_Incorrect_Details__c</fullName>
    <label>Expectations Incorrect Details</label>
    <length>128</length>
    <type>Text</type>
</CustomField>