force-app/main/default/objects/Course_Questionnaire__c/fields/Materials_Incorrect_Details__c.field-meta.xml
<CustomField>
    <fullName>Materials_Incorrect_Details__c</fullName>
    <label>Materials Incorrect Details</label>
    <length>128</length>
    <type>Text</type>
</CustomField>