force-app/main/default/objects/Course_Questionnaire__c/fields/Materials_were_correct_available__c.field-meta.xml
<CustomField>
    <fullName>Materials_were_correct_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Materials were correct/available</label>
    <type>Checkbox</type>
</CustomField>