force-app/main/default/objects/Course_Questionnaire__c/fields/Provided_with_correct_room_location__c.field-meta.xml
<CustomField>
    <fullName>Provided_with_correct_room_location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provided with correct room/location</label>
    <type>Checkbox</type>
</CustomField>