force-app/main/default/objects/Course_Questionnaire__c/fields/Ran_according_to_expectations__c.field-meta.xml
<CustomField>
    <fullName>Ran_according_to_expectations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ran according to expectations</label>
    <type>Checkbox</type>
</CustomField>