force-app/main/default/objects/Course_Questionnaire__c/fields/Required_equipment_was_available__c.field-meta.xml
<CustomField>
    <fullName>Required_equipment_was_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required equipment was available</label>
    <type>Checkbox</type>
</CustomField>