force-app/main/default/objects/Course_Questionnaire__c/fields/Room_Location_Incorrect_Details__c.field-meta.xml
<CustomField>
    <fullName>Room_Location_Incorrect_Details__c</fullName>
    <label>Room/Location Incorrect Details</label>
    <length>128</length>
    <type>Text</type>
</CustomField>