force-app/main/default/objects/Course_Questionnaire__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <formula>Service_Appointment__r.Service_Resource_Name__c</formula>
    <label>Trainer</label>
    <type>Text</type>
</CustomField>