force-app/main/default/objects/Course_Questionnaire__c/recordTypes/Toyota.recordType-meta.xml
<RecordType>
    <fullName>Toyota</fullName>
    <active>true</active>
    <description>Used for Toyota Time Tracking</description>
    <label>Toyota</label>
</RecordType>