force-app/main/default/objects/Course_Questionnaire__c/validationRules/Correct_Room.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Room</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.Name = &apos;Toyota&apos;,
 Provided_with_correct_room_location__c = FALSE,
 ISBLANK(Room_Location_Incorrect_Details__c)
)</errorConditionFormula>
    <errorMessage>Provide details if correct room details weren&apos;t provided!</errorMessage>
</ValidationRule>