force-app/main/default/objects/Course_Questionnaire__c/validationRules/Danielle_Contacted.validationRule-meta.xml
<ValidationRule>
    <fullName>Danielle_Contacted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.Name = &apos;Toyota&apos;,
 Did_you_contact_H_S_Contact__c,
 ISBLANK(Contacted_H_S_Contact_Details__c)
)</errorConditionFormula>
    <errorMessage>Provide details of why Danielle was contacted!</errorMessage>
</ValidationRule>