force-app/main/default/objects/Course_Questionnaire__c/validationRules/Ended_On_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Ended_On_Time</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.Name = &apos;Toyota&apos;,
 Ended_On_Time__c = FALSE,
 ISBLANK(Actual_End_Time__c)
)</errorConditionFormula>
    <errorMessage>Need to specify actual end time if did not finish at scheduled end time!</errorMessage>
</ValidationRule>