force-app/main/default/objects/Course_Questionnaire__c/validationRules/Equipment_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Equipment_Available</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.Name = &apos;Toyota&apos;,
 Required_equipment_was_available__c = FALSE,
 ISBLANK(Equipment_Unavailable_Details__c)
)</errorConditionFormula>
    <errorMessage>Provide details if equipment was not available!</errorMessage>
</ValidationRule>