force-app/main/default/objects/Course_Questionnaire__c/validationRules/Materials_Correct.validationRule-meta.xml
<ValidationRule>
    <fullName>Materials_Correct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.Name = &apos;Toyota&apos;,
 Materials_were_correct_available__c = FALSE,
 ISBLANK(Materials_Incorrect_Details__c)
)</errorConditionFormula>
    <errorMessage>Provide details if materials were not correct/provided!</errorMessage>
</ValidationRule>