force-app/main/default/objects/Course_Questionnaire__c/validationRules/Not_a_Toyota_SA.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_a_Toyota_SA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(Contains(Service_Appointment__r.Training_Address1__r.Account__r.Name , &apos;Toyota Motor&apos;)),
 RecordType.Name != &apos;Toyota&apos;
)</errorConditionFormula>
    <errorMessage>Can only create questionnaire for Toyota based Service Appointments!</errorMessage>
</ValidationRule>