force-app/main/default/objects/Course_Questionnaire__c/validationRules/Number_of_participants.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_participants</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( Number_of_Participants__c ),
 RecordType.Name = &apos;Toyota&apos;
)</errorConditionFormula>
    <errorMessage>Need to enter number of participants!</errorMessage>
</ValidationRule>