force-app/main/default/objects/Course_Questionnaire__c/validationRules/Ran_according_to_expectations.validationRule-meta.xml
<ValidationRule>
    <fullName>Ran_according_to_expectations</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.Name = &apos;Toyota&apos;,
 Ran_according_to_expectations__c = FALSE,
 ISBLANK(Expectations_Incorrect_Details__c)
)</errorConditionFormula>
    <errorMessage>Provide details and variations if course/eval did not run according to expectations!</errorMessage>
</ValidationRule>