force-app/main/default/objects/Course_Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Appointment__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Number_of_Participants__c</columns>
    <columns>Product_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Actual_End_Time__c</columns>
    <columns>Arrived_On_Time__c</columns>
    <columns>Did_you_contact_H_S_Contact__c</columns>
    <columns>Ended_On_Time__c</columns>
    <columns>Materials_were_correct_available__c</columns>
    <columns>Provided_with_correct_room_location__c</columns>
    <columns>Ran_according_to_expectations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>