force-app/main/default/objects/Course_Questionnaire__c/listViews/Toyota_H_S_Contact.listView-meta.xml
<ListView>
    <fullName>Toyota_H_S_Contact</fullName>
    <columns>NAME</columns>
    <columns>Service_Appointment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Trainer__c</columns>
    <columns>Number_of_Participants__c</columns>
    <columns>Contacted_H_S_Contact_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Course_Questionnaire__c.Toyota</value>
    </filters>
    <filters>
        <field>Did_you_contact_H_S_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Toyota H&amp;S Contact</label>
</ListView>